# prometheus-api

./: manage.py  pyproject.toml  schema.yaml
prometheus_api/: asgi.py  settings.py  urls.py  wsgi.py
stock/: serializer.py  sse_render.py  urls.py  views.py
